--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -12,11 +12,12 @@ In this package we are writing fast R code for Lab 6
 
 
 ```{r message=FALSE, warning=FALSE}
-knapsack_objects <-
-  data.frame(
-    w=sample(1:4000, size = n, replace = TRUE),
-    v=runif(n = n, 0, 10000)
-  )
+set.seed(42)
+n <- 2000
+knapsack_objects <-data.frame(
+  w=sample(1:4000, size = n, replace = TRUE),
+  v=runif(n = n, 0, 10000)
+)
 
 ```
 
@@ -80,3 +81,4 @@ result
 ```{r}
 
 ```
+
