--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -52,7 +52,7 @@ brute_force_knapsack <- function(x,W){
   Value_Combinations <- which(Values_vector == maxValue) # using which to get the maximum Value
   validCombination <- Combinations_vector[Value_Combinations]
 
-  best_combination <- list(value = maxValue, elements = validCombination) #creating a list
+  best_combination <- list(value = maxValue, elements = as.numeric(strsplit(validCombination, " ")[[1]])) #creating a list
   return(best_combination)
 }
 
@@ -62,24 +62,10 @@ brute_force_knapsack <- function(x,W){
   How much time does it takes to run the algorithm for n = 16 objects?
   
 ```{r message=FALSE, warning=FALSE}
-ptm <- proc.time()
+
 brute_force_knapsack(x = knapsack_objects[1:16,], W = 3500)
-result <- proc.time() - ptm
+result <- system.time(brute_force_knapsack(x = knapsack_objects[1:16,], W = 3500))
 result
-```
-
-
-**Dynamic Programming**
-
-```{r}
-
-```
-
-**Question**
-  How much time does it takes to run the algorithm for n = 500 objects?
-  
-```{r}
-
 ```
 
 
@@ -123,9 +109,8 @@ return(output)
   
 ```{r}
 
-ptm <- proc.time()
-greedy_knapsack(x = knapsack_objects[1:800,], W = 3500)
-result <- proc.time() - ptm
+greedy_knapsack(x = knapsack_objects[1:1000000,], W = 3500)
+result <- system.time(greedy_knapsack(x = knapsack_objects[1:1000000,], W = 3500))
 result
 
 ```
