--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -52,7 +52,7 @@ brute_force_knapsack <- function(x,W){
   Value_Combinations <- which(Values_vector == maxValue) # using which to get the maximum Value
   validCombination <- Combinations_vector[Value_Combinations]
 
-  best_combination <- list(value = maxValue, elements = as.numeric(strsplit(validCombination, " ")[[1]])) #creating a list
+  best_combination <- list(value = maxValue, elements = as.numeric(validCombination) #creating a list
   return(best_combination)
 }
 
